<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GRA услуги Омск</string>



    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- заголовки форм -->
    <string name="app_header">GRA рейтинг услуг</string>
    <string name="app_module_header">агент </string>
    <string name="app_module_header_connected">Устанавливаю подключение к Интернет</string>


    <string name="app_leftmenu_header">Настройки</string>
    <string name="app_leftmenu_module_header">GRA рейтинг услуг</string>


    <string name="app_leftmenu_settings"><strike>Настройки</strike></string>
    <string name="app_leftmenu_favorites">Избранное</string>


    <string name="prompt_region">Граница поиска</string>
    <string name="prompt_report_form">Форма вывода</string>



    <string name="icon_search"> "@" </string>




    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_name">Ваше <b>имя</b></string>

    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="action_forgot_password">Recover lost password</string>

    <string name="login_progress_signing_in">Signing in&#8230;</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="hint_kindofactivity">какая услуга требуется?</string>
    <string name="hint_adress">укажите ваш адрес</string>
    <string name="app_leftmenu_history">История запросов</string>


</resources>